lab1/Test/L1-A-3-29.cmm
struct USAPUj3wwybbgM38i fZjFrRz4cE ( struct hmFQSTK23 
  B6PweP8hX7ig [ 833074173 ] [ 336610385 ] [ 1982852798 
  ] [ 1870667006 ] [ 1976556745 ]  [ 1596580332 ] ) 
  {
  int EJ9FmZkcN , return LvVN0THda0R5f ;
  struct oQ205iw ZGa4oswO7ot1Iu = HcqqIhfE8 `, bDWzfmTuECP2Q4ua7250 
    ;
  struct {
  }v4KIBM_b ;&& 
}
/ 